feat: 新增除錯模式設定功能
在選項頁面中加入除錯模式的開關，並在程式中實作相關的除錯資訊顯示。更新背景和內容腳本以支援此功能，並確保在儲存設定時能夠保存除錯模式的狀態。

--- a/options.html
+++ b/options.html
@@ -83,6 +83,14 @@
     <button id="useDefault">恢復預設圖片</button>
   </div>
 
+  <div class="option-group">
+    <h2>除錯模式</h2>
+    <label>
+      <input type="checkbox" id="debugMode"> 啟用除錯模式（重新載入頁面後生效）
+    </label>
+    <p class="description">開啟除錯模式後，將在瀏覽器主控台顯示詳細的除錯資訊。</p>
+  </div>
+
   <button id="saveButton">儲存設定</button>
   <div id="statusMessage" class="status"></div>
 
