feat: 重構擴充功能架構並升級錯誤處理機制
核心變更：
1. 架構重組
- 簡化模組結構，整合原本分散的功能到 content.js
- 移除 eventHandler.js 並將事件處理邏輯整合到主要程式碼中
- 重組模組載入順序，確保功能依賴性正確

2. 錯誤處理增強
- 新增通訊失敗自動重試機制
- 改善錯誤提示訊息的可讀性
- 加入錯誤狀態的詳細診斷資訊
- 新增除錯模式支援，方便開發與除錯

3. 權限與相容性優化
- 新增 "tabs" 權限以改善分頁間通訊
- 加入 "host_permissions" 支援所有網站
- 設定 "type": "module" 支援 ES6 模組系統
- 調整 content_scripts 執行時機至 "document_end"

4. 效能改進
- 優化程式碼載入順序
- 改善資源載入機制
- 強化錯誤重試邏輯，避免無限重試

--- a/popup.html
+++ b/popup.html
@@ -69,15 +69,11 @@
       display: inline-flex;
       gap: 5px;
     }
-    .warning-text {
-      color: red;
-      margin: 10px 0;
-    }
   </style>
 </head>
 <body>
   <h1>Google Map 羅盤</h1>
-  <strong class="warning-text">快捷鍵若無反應，請將輸入法切為英文輸入</strong>
+  <strong>快捷鍵若無反應，請將輸入法切為英文輸入</strong>
   <p>擴充功能已啟動。在 Google 地圖上拖曳和縮放羅盤。</p>
   
   <div class="commands">
