feat: 新增背景控制器與訊息處理邏輯，重構事件處理與線條管理功能
- 新增線條管理器以處理線條繪製與清除功能
- 重構選項與彈出視窗控制器，整合設定頁面邏輯
- 更新 manifest 檔案以包含新的模組

--- a/options.html
+++ b/options.html
@@ -94,6 +94,7 @@
   <button id="saveButton">儲存設定</button>
   <div id="statusMessage" class="status"></div>
 
+  <script src="modules/optionsController.js"></script>
   <script src="options.js"></script>
 </body>
 </html>
