--- a/popup.html
+++ b/popup.html
@@ -125,6 +125,7 @@
   
   <a href="#" id="openSettings" class="settings-link">自訂羅盤圖片</a>
   
+  <script src="modules/popupController.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
