--- a/options.html
+++ b/options.html
@@ -53,6 +53,8 @@
       margin-top: 15px;
       padding: 10px;
       display: none;
+      border-radius: 4px;
+      font-size: 14px;
     }
     .success {
       background-color: #d4edda;
@@ -63,6 +65,16 @@
       background-color: #f8d7da;
       color: #721c24;
       border: 1px solid #f5c6cb;
+    }
+    .warning {
+      background-color: #fff3cd;
+      color: #856404;
+      border: 1px solid #ffeeba;
+    }
+    .info {
+      background-color: #cce5ff;
+      color: #004085;
+      border: 1px solid #b8daff;
     }
   </style>
 </head>
@@ -81,6 +93,14 @@
   <div class="option-group">
     <label for="useDefault">使用預設圖片：</label>
     <button id="useDefault">恢復預設圖片</button>
+  </div>
+
+  <div class="option-group">
+    <h2>左旋方向設定</h2>
+    <label>
+      <input type="checkbox" id="counterClockwisePositive"> 左旋時角度增加（未勾選則左旋時角度減少）
+    </label>
+    <p class="description">設定羅盤左旋時角度的變化方向。</p>
   </div>
 
   <div class="option-group">
